# used-addr-check

./: README.md  pyproject.toml  requirements.txt
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: main.yml  publish.yml
src/address_used_check/: cli.py  make_optimized_file.py
src/used_addr_check/: __init__.py  cli.py  download_list.py  index_create.py  index_search.py  make_optimized_file.py  optimized_file.py  scan_file.py  search_optimized_file.py
tests/: test_scan_file.py
