[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "used_addr_check"
version = "0.0.1"
authors = [
  { name="RecRanger", email="RecRanger+package@proton.me" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RecRanger/used_addr_check"
Issues = "https://github.com/RecRanger/used_addr_check/issues"

[project.scripts]
used_addr_check = "used_addr_check.cli:main_cli"
